[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-route"
version = "1.0.0"
description = "Generate personalized study routes from chapter knowledge data"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0,<4.0",
]

[project.optional-dependencies]
llm = [
    "openai>=2.0,<3.0",
    "httpx>=0.25,<1.0",
]

[project.scripts]
study-route = "study_route.cli:main"

[tool.setuptools.packages.find]
include = ["study_route*"]
